# dqa-lab-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Claude.md  Dockerfile  LICENSE  Makefile  README.md  demo.db  dev_start.sh  git_log.txt  pyproject.toml
.claude/: settings.json
.claude/rules/: api-conventions.md  frontend.md  state-machine.md  testing.md  workflow.md
.github/workflows/: deploy-hf.yml  test.yml
backend/: alembic.ini  init_db.py  rag_cache.pkl  railway.toml  requirements.txt
backend/alembic/: env.py
backend/app/: ai.py  audit.py  auth.py  constants.py  devices.py  devices_maintenance.py  errors.py  fixture_notifications.py  fixtures.py  line.py  main.py  models.py  notification_failures.py  purchase_orders.py  rag.py  reports.py  schedule_service.py  schedules.py  serial_reader.py  simulator.py  sop.py  uncertainty.py  utils.py  ws.py
backend/tests/: test_auth.py  test_devices.py  test_fixtures.py  test_linkage.py  test_maintenance.py  test_purchase_orders.py  test_schedules_calc.py  test_schedules_complete.py  test_schedules_slot.py  test_sop_validation.py  test_uncertainty.py
client/: .env.production  package-lock.json  package.json  vercel.json
client/src/: AIPage.jsx  App.jsx  ControlCenter.jsx  Dashboard.jsx  ErrorLog.jsx  Errorlog.jsx  ExecutionList.jsx  FixturePage.jsx  MaintenancePage.jsx  SOPPage.css  SOPPage.jsx  SchedulePage.jsx  UsersPage.jsx  api.js  index.css  (+3 more)
docs/: architecture.md
simulator/: main.py
tests/: test_auth.sh  test_fixtures.sh  test_health.sh  test_reports.sh  test_schedules.sh
(+56 files in other folders)
