[project]
name = "dqa-lab-digital-twin"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
exclude = [
    "venv",
    ".venv",
    "backend/alembic/versions",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E402",   # module-level import not at top (main.py needs load_dotenv first)
]

[tool.ruff.lint.per-file-ignores]
# 以下檔案含中文說明字串，不適用 120 字元限制
"backend/app/standards/*.py" = ["E501"]
"backend/app/ai.py" = ["E501"]
"backend/app/simulator.py" = ["E501"]
"backend/init_db.py" = ["E501"]
"backend/app/fixtures.py" = ["E501"]
